...
      barStyle={{backgroundColor: 'white'}}>
      <Tab.Screen
        name="HomeScreen"
        component={HomeScreen}
        options={{
          // headerShown: false,
          // headerTitle: 'Home',
          tabBarIcon: ({color}) => (
            <Entypo name="home" size={24} color={color} />
          ),
        }}
      />
      <Tab.Screen
        name="SearchScreen"
        component={SearchScreen}
        options={{
          // title: 'Search',
          tabBarIcon: ({color}) => (
            <AntDesign name="search1" size={24} color={color} />
          ),
        }}
      />
      <Tab.Screen
...
