...
const news = [
  {
    title:
      'Monarch population soars 4,900 percent since last year in thrilling 2021 western migration',
    thumbnail:
      'https://cdn.pixabay.com/photo/2016/03/08/20/03/flag-1244649_960_720.jpg',
    author: 'Andy Corbley',
    tag: 'World',
    created: '1 minute ago',
    content: `When just 200 Western monarch butterflies arrived in the Pismo Beach Butterfly Grove from their northerly migration last year, park rangers feared the treasured insect would soon be gone forever.

This year, however, volunteers tallied their numbers at over 100,000, a spectacular swarm of hope that traveled down from as far north as Canada to the spend the winter on the California coast.

...
          <Image
            style={{width: 25, height: 25}}
            source={require('../../assets/images/newsLogo1.png')}
            alt="logo image"
          />
          <Text fontSize="md" fontWeight="semibold">
            Simple News
          </Text>
        </HStack>
        <FlatList
          my={10}
          maxH={50}
          showsHorizontalScrollIndicator={false}
...
