...
            <Menu.Item>
              <Entypo name="share-alternative" size={20} color="black" />
              Share
            </Menu.Item>
            <Menu.Item>
              <Feather name="bookmark" size={24} color="black" />
              Bookmark
            </Menu.Item>
          </Menu>
        </HStack>
      </VStack>
    </HStack>
  );
...
