...
        // width={WindowWidth * 0.9}
        height="100%"
        pt={10}
        px={3}>
        <HStack space={2} alignItems="center">
          <Text fontSize="md" fontWeight="bold">
            Bookmarked
          </Text>
        </HStack>
        <FlatList
          my={10}
          maxH={50}
          showsHorizontalScrollIndicator={false}
...
